--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,9 @@ h3 {
 
 
 a {
-    color: #333300;
-    font-weight: 400;
-    text-decoration: none;
+    color: #fff;
+    font-weight: 500;
+    text-decoration: underline;
 }
 
 a:hover {
@@ -73,6 +73,34 @@ li {
 /* header {
     height: 100px;
 } */
+
+.legend {
+    padding: 6px 8px;
+    font-size: 1em;
+    background: rgb(213, 232, 235, .8);
+  
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    width: 200px;
+}
+
+.legend ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 12px 4px 0;
+}
+
+.legend li {
+    list-style-type: none;
+    height: 22px;
+}
+
+.legend span {
+    width: 30px;
+    height: 20px;
+    float: left;
+    margin-right: 10px;
+}
 
 footer {
     height: 50px;
