Update view changes

--- a/styles.css
+++ b/styles.css
@@ -76,30 +76,29 @@ li {
 
 .legend {
     padding: 6px 8px;
-    font-size: 1em;
+    font-size: 1.1em;
     background: rgb(213, 232, 235, .8);
   
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    width: 200px;
+    width: 225px;
 }
 
-.legend ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 12px 4px 0;
-}
-
-.legend li {
-    list-style-type: none;
-    height: 22px;
-}
-
-.legend span {
-    width: 30px;
-    height: 20px;
+.legend-circle {
+    width: 15px;
+    height: 15px;
     float: left;
-    margin-right: 10px;
+    margin-right: 8px;
+    margin-top: 2px;
+    vertical-align: bottom;
+    border-radius: 50%;
+    border: 2px #32814c solid;
+    background-color: rgba(50, 129, 76, .8);
+    display: inline;
+}
+
+.legend-label {
+    display: inline;
 }
 
 footer {
