--- a/styles.css
+++ b/styles.css
@@ -111,8 +111,11 @@ li {
 
 footer {
     height: 50px;
-    background-color: #262527;
-    font-size: 0.7rem;
+    background-color:  #0e2516; 
+}
+
+footer ul {
+    font-size: 0.8rem;
 }
 
 aside {
@@ -123,6 +126,11 @@ aside {
 
 .container-fluid {
     background-color: #333;
+}
+
+#locateFeedback {
+    color: #fff;
+    font-size: 1em;
 }
 
 /* Landscape devices all scenarios */
